# rapidcsv

./: .gitignore  CMakeLists.txt  LICENSE  README.md  dependencies.txt  install.sh  make.sh  manualBuild.sh
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: linux.yml  macos.yml  windows.yml
cmake/: rapidcsv.cmake
doc/: README.md  UpstreamRepoChanges.md  dependencies.txt  rapidcsv_ConvertFromStr.md  rapidcsv_ConvertFromStr_gNaN.md  rapidcsv_ConvertFromVal.md  rapidcsv_ConverterToStr.md  rapidcsv_ConverterToVal.md  rapidcsv_Document.md  rapidcsv_NaNaccess.md
doc/converter/: converter_ConvertFromStr.md  converter_ConvertFromStr_fNaN.md  converter_ConvertFromStr_gNaN.md  converter_ConvertFromTuple.md  converter_ConvertFromVal.md  converter_ConvertFromVal_gNaN.md  rapidcsv_ConvertFromStr_fNaN.md  rapidcsv_ConvertFromTuple.md  rapidcsv_ConvertFromVal.md  rapidcsv_ConvertFromVal_gNaN.md
doc/document/: rapidcsv_Document.md  rapidcsv_LabelParams.md
doc/properties/: properties_Properties.md  properties_PropertyFile.md
doc/view/: rapidcsv_FilterDocument.md  rapidcsv_FilterSortDocument.md  rapidcsv_SortKeyFactory.md  rapidcsv_SortParams.md  rapidcsv__RowComparator.md  rapidcsv__ViewDocument.md
examples/: CMakeLists.txt  ex001.cpp  ex002.cpp  ex003.cpp  ex004.cpp  ex005.cpp  ex006.cpp  ex007.cpp  ex008.cpp  ex009.cpp  ex010.cpp  exConv001.cpp
examples/cmake-add-subdirectory/: CMakeLists.txt  README.md
examples/cmake-add-subdirectory/src/: exprog2.cpp
examples/cmake-fetchcontent/: CMakeLists.txt
include/converter/: converter.h
include/rapidcsv/: Properties.h  converter.h  rapidcsv.h  view.h
tests/: CMakeLists.txt  PropertiesParserTest.cpp  PropertiesTest.cpp  checkChrono.cpp  checkChrono_fromStream.cpp  checkChrono_toStream.cpp  checkMacroPrefixMap.cpp  perftest.h  ptest001.cpp  ptest002.cpp  test001.cpp  test002.cpp  test003.cpp  test004.cpp  test005.cpp  test006.cpp  test007.cpp  test008.cpp  test009.cpp  test010.cpp  test011.cpp  test012.cpp  test013.cpp  test014.cpp  test015.cpp  test016.cpp  test017.cpp  test018.cpp  test019.cpp  test020.cpp  test021.cpp  test022.cpp  test023.cpp  test024.cpp  test025.cpp  test026.cpp  test027.cpp  test028.cpp  test029.cpp  test030.cpp  (+96 more)
tests/properties/: out.properties
